<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.scavengerhunt.GameMenuActivity">

    <item android:id="@+id/mainmenu_create_game"
        android:title="@string/label_create_new_game"
        android:icon="@mipmap/create_game"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/mainmenu_camera"
        android:title="@string/label_camera"
        android:icon="@mipmap/camera"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/mainmenu_mail"
        android:title="@string/label_message"
        android:icon="@mipmap/mail"
        app:showAsAction="ifRoom" />
    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        app:showAsAction="never" />
    <item android:id="@+id/action_logout"
        android:title="@string/label_log_out"
        android:orderInCategory="101"
        app:showAsAction="never" />

</menu>
