<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    tools:context="com.example.scavengerhunt.RegisterActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="@string/label_enterUsernamePasswordEmail"
        android:textSize="14.0sp"
        android:textStyle="bold"
        android:visibility="visible" />

    <EditText
        android:id="@+id/textbox_registerUsername"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_username"
        android:inputType="text"
        android:padding="10dp"
        android:singleLine="true"
        android:visibility="visible" />

    <EditText
        android:id="@+id/textbox_registerPassword"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:padding="10dp"
        android:singleLine="true"
        android:visibility="visible" />

    <EditText
        android:id="@+id/textbox_registerEmail"
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp"
        android:hint="@string/hint_email"
        android:inputType="text"
        android:padding="10dp"
        android:singleLine="true"
        android:visibility="visible" />

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="fill_parent"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/registerbutton_register"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/label_register"
            android:textSize="16sp"
            android:textStyle="normal" />

        <Button
            android:id="@+id/registerbutton_cancel"
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/label_cancel"
            android:textSize="16sp"
            android:textStyle="normal" />

    </LinearLayout>


</LinearLayout>
