<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_gravity="center"
        android:orientation="vertical"
        tools:context=".TitlePageActivity">

        <TextView
            android:id="@+id/login_welcome_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/welcome"
            android:textSize="26.0sp" />

        <TextView
            android:id="@+id/login_message_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/welcome_message"
            android:textSize="20.0sp" />

    <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="fill_parent"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:gravity="center"
            android:orientation="horizontal" >

            <Button
                android:id="@+id/loginbutton_sign_in"
                android:layout_height="wrap_content"
                android:layout_width="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/label_sign_in"
                android:textSize="16sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/loginbutton_new_user"
                android:layout_height="wrap_content"
                android:layout_width="1dp"
                android:layout_weight="1"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/label_new_user"
                android:textSize="16sp"
                android:textStyle="normal" />

        </LinearLayout>

        <ImageView
            android:id="@+id/login_image_view"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/app_name"
            android:src="@mipmap/logo" />

    </LinearLayout>
